fix(*):1. check style